# AIHW6

./: .gitignore  AGENT_MEMORY.md  CLAUDE.md  README.md  config.json  pyproject.toml  render.yaml
artifacts/: deepseek_2x2_run.txt  deepseek_5x5_run.txt  deepseek_cloud_run.txt  final_graded_run.txt
artifacts/analysis/: qlearn_rewards_cop.csv  qtable_cop.npy  vision_sweep.csv
artifacts/security/: cloud_verify_20260702_133253.txt  cloud_verify_20260702_210304.txt
artifacts/transcripts/: deepseek_2x2_transcript.md  deepseek_5x5_transcript.md  deepseek_cloud_5x5_transcript.md  final_graded_run_transcript.md
deploy/: Dockerfile  entrypoint.py
docs/: ARCHITECTURE.md  ENVIRONMENT.md  GAME_RULES.md  GRADING_RUBRIC.md  HW6_DECLARATION.md  PRD.md  PRD_agents_llm.md  PRD_cloud_security.md  PRD_game_engine.md  PRD_gui.md  PRD_mcp_servers.md  PRD_reporting_gmail.md  REPORTING_SPEC.md  RUNBOOK_cloud.md  TESTING.md
plan/: PLAN.md  TASK_BOARD.md  TODO.md
plan/tasks/: TRACK_A_game_engine.md  TRACK_B_mcp_servers.md  TRACK_C_agents_llm.md  TRACK_D_gui.md  TRACK_E_reporting_gmail.md  TRACK_F_cloud_security.md
scripts/: cloud_verify.py  gmail_retry.py  render_deploy.py  vision_sweep.py
src/: orchestrator.py
src/agents/: agent.py  belief.py  llm_adapter.py  parser.py  qlearn.py  strategy.py
src/common/: config.py  logging.py  schemas.py
src/engine/: board.py  engine.py  errors.py  series.py
src/gui/: board_view.py  events.py  export.py  live.py  replay.py
src/reporting/: auth.py  builder.py  gmail_sender.py  models.py  smoke.py
tests/: conftest.py
(+13 files in other folders)
